--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,14 @@
     <string name="close_drawer">Close Drawer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- res/values/strings.xml -->
+        <!-- Existing strings -->
+
+        <string-array name="priority_levels">
+            <item>Low</item>
+            <item>Medium</item>
+            <item>High</item>
+        </string-array>
 
 
 </resources>
